change Bord Design

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ PSoC_PyunPyun_3rdLPF.cydsn/CortexM0/
 PSoC_PyunPyun_3rdLPF.cydsn/Export/
 PSoC_PyunPyun_3rdLPF.cydsn/Generated_Source/
 PSoC_PyunPyun_3rdLPF.cydsn/codegentemp/
+
+Picture/
+LTSpice/3rd-VCVS-LPF-10kHz.op.raw
+*.raw
